--- a/Project 2/Melson-CF.yml
+++ b/Project 2/Melson-CF.yml
@@ -97,68 +97,85 @@ Resources:
   NetworkACL:
     Type: 'AWS::EC2::NetworkAcl'
     Properties:
-      VpcId: !Ref VPC
+      VpcId: vpc-0c1dcd91e867686c8
       Tags:
         - Key: Name
-          Value: CEGXXX NACL
+          Value: Melson
         - Key: Application
           Value: !Ref 'AWS::StackId'
   InboundAllowAllRule:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
-      NetworkAclId: !Ref NetworkACL
+      NetworkAclId: acl-0e068d7bb2c40396d
       RuleNumber: 100
       Protocol: -1
       Egress: false
       RuleAction: allow
-      CidrBlock: 0.0.0.0/0
+      CidrBlock: 130.108.104.16/32
       PortRange:
-        From: 1
-        To: 65535
+        From: 22
+        To: 22
   OutboundAllowAllRule:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
-      NetworkAclId: !Ref NetworkACL
+      NetworkAclId: acl-0e068d7bb2c40396d
       RuleNumber: 100
-      Protocol: -1
+      Protocol: tcp
       Egress: true
       RuleAction: allow
-      CidrBlock: 0.0.0.0/0
+      CidrBlock: 130.108.0.0/16
   SubnetNetworkAclAssociation:
     Type: AWS::EC2::SubnetNetworkAclAssociation
     Properties:
       SubnetId:
-        Ref: Subnet
+        Ref: Subnet - subnet-0a76a4a0fd7985a9b
       NetworkAclId:
-        Ref: NetworkACL
+        Ref: NetworkACL - acl-0e068d7bb2c40396d
   PublicUbuntuInstance:
     Type: 'AWS::EC2::Instance'
     DependsOn: AttachGateway
     Properties:
-      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
+      ImageId: ami-00402f0bdf4996822 
       InstanceType: t2.micro
-      KeyName: !Ref KeyName
+      KeyName: vockey
       Tags:
         - Key: Application
           Value: !Ref 'AWS::StackId'
         - Key: Name
-          Value: CEGXXXX Ubuntu
+          Value: Melson
       NetworkInterfaces:
         - GroupSet:
-            - !Ref SecurityGroup
+            - sg-0dec79cb768b0d6c9
           AssociatePublicIpAddress: 'true'
           DeviceIndex: '0'
           DeleteOnTermination: 'true'
-          SubnetId: !Ref Subnet
-          PrivateIpAddress: 10.0.0.25
+          SubnetId: subnet-0a76a4a0fd7985a9b
+          PrivateIpAddress: 172.18.0.0/24
       UserData:
-        Fn::Base64:
-          !Sub |
-            #!/bin/bash -xe
-            apt-get update && \
-            apt-get install -y \
-              git \
-              htop \
-              sl && \
-            echo "This is from the CF template" > /home/ubuntu/hello.txt && \
-            reboot
+      Fn::Base64:
+        !Sub |
+          #!/bin/bash -xe
+
+          # Update the system packages
+          apt-get update && \
+          apt-get upgrade -y
+
+          # Install required software
+          apt-get install -y \
+            git \
+            python3 \
+            python3-pip \
+            apache2 \
+            wamerican
+
+          # Set the instance hostname
+          hostnamectl set-hostname Melson-Instance
+
+          # Copy wordle.sh to the home directory
+          cp /home/ubuntu/wordle.sh /home/ubuntu/
+
+          # Copy index.html to the Apache web directory
+          cp /home/ubuntu/index.html /var/www/html/
+
+          # Reboot the instance
+          reboot
